src/test/deca/syntax/valid/provided/perso/var.deca
{

int a=1;
float b=3;
char c='A';

}