src/test/deca/syntax/invalid/provided/oversized_int.deca
{
    int x=100000000000000000;
}